syntax = "proto3";

option go_package = "github.com/phildehovre/common/orders";

service OrderService {
    // Corrected: Added request type for CreateOrder
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
    
    // Added GetOrders method to match the messages defined
    rpc GetOrders(GetOrdersRequest) returns (GetOrderResponse) {}
}

message CreateOrderRequest {
    int32 customerID = 1;
    int32 productID = 2;
    int32 quantity = 3;
}

message CreateOrderResponse {
    string status = 1;
}

message GetOrdersRequest {
    int32 customerID = 1;
}

message GetOrderResponse {
    repeated Order orders = 1;
}

// Added Order message as it's used in GetOrderResponse
message Order {
    int32 orderID = 1;
    int32 customerID = 5;
    int32 productID = 2;
    int32 quantity = 3;
    string status = 4;

}
